[gd_scene load_steps=39 format=2]

[ext_resource path="res://assets/fonts/delfino.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/editor/music_changer.gd" type="Script" id=2]
[ext_resource path="res://scenes/editor/level_size.gd" type="Script" id=3]
[ext_resource path="res://scenes/editor/background_changer.gd" type="Script" id=4]
[ext_resource path="res://scenes/editor/ResetLevelButton.gd" type="Script" id=5]
[ext_resource path="res://scenes/shared/background/foregrounds/none/preview.png" type="Texture" id=6]
[ext_resource path="res://scenes/editor/window.gd" type="Script" id=7]
[ext_resource path="res://scenes/editor/level_name_editor.gd" type="Script" id=8]
[ext_resource path="res://scenes/shared/background/backgrounds/night/night.png" type="Texture" id=9]
[ext_resource path="res://scenes/editor/Areas.gd" type="Script" id=10]
[ext_resource path="res://scenes/editor/assets/outline.png" type="Texture" id=11]
[ext_resource path="res://scenes/editor/assets/clickable_arrow_hover.png" type="Texture" id=12]
[ext_resource path="res://scenes/editor/sounds/click2.wav" type="AudioStream" id=13]
[ext_resource path="res://scenes/editor/assets/window.png" type="Texture" id=14]
[ext_resource path="res://scenes/editor/sounds/hover.wav" type="AudioStream" id=15]
[ext_resource path="res://scenes/editor/assets/window_close_hover.png" type="Texture" id=16]
[ext_resource path="res://scenes/editor/assets/clickable_arrow.png" type="Texture" id=17]
[ext_resource path="res://scenes/editor/assets/music_background.png" type="Texture" id=18]
[ext_resource path="res://scenes/editor/assets/window_close.png" type="Texture" id=19]
[ext_resource path="res://scenes/editor/areas_button.gd" type="Script" id=20]
[ext_resource path="res://scenes/menu/127Button.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/shared/Hotkeys.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/editor/window/gravity.gd" type="Script" id=23]

[sub_resource type="DynamicFont" id=1]
size = 56
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0 )
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="DynamicFont" id=5]
size = 112
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 16
border_width_right = 16
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="DynamicFont" id=15]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0705882, 0, 0.231373, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.0470588, 0.317647, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[node name="LevelSettingsWindow" type="NinePatchRect"]
margin_left = 165.0
margin_top = 129.921
margin_right = 1218.0
margin_bottom = 763.921
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 0
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 108, 290 )
patch_margin_left = 40
patch_margin_top = 110
patch_margin_right = 40
patch_margin_bottom = 40
script = ExtResource( 7 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 24.2632
margin_right = 456.0
margin_bottom = 102.263
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "Settings"
text = "Settings"

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 888.65
margin_top = 12.953
margin_right = 1043.65
margin_bottom = 93.953
rect_scale = Vector2( 0.95, 0.95 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 16 )

[node name="HoverSound" type="AudioStreamPlayer" parent="CloseButton"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="CloseButton"]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="LevelSettings" type="Control" parent="."]
anchor_bottom = 0.06
margin_left = 17.4044
margin_top = 104.0
margin_right = 1036.4
margin_bottom = 498.0

[node name="BackgroundEdit" type="Control" parent="LevelSettings"]
margin_top = 30.0
margin_right = 40.0
margin_bottom = 70.0
script = ExtResource( 4 )
backgrounds_node_path = NodePath("../../../../Backgrounds")

[node name="Preview" type="Control" parent="LevelSettings/BackgroundEdit"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 40.0

[node name="Outline" type="TextureRect" parent="LevelSettings/BackgroundEdit/Preview"]
margin_left = -10.0
margin_top = -10.0
margin_right = 798.0
margin_bottom = 467.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
stretch_mode = 1

[node name="BackgroundPreview" type="TextureRect" parent="LevelSettings/BackgroundEdit/Preview"]
margin_right = 768.0
margin_bottom = 432.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="ForegroundPreview" type="TextureRect" parent="LevelSettings/BackgroundEdit/Preview"]
margin_right = 768.0
margin_bottom = 432.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="BackgroundButtons" type="Control" parent="LevelSettings/BackgroundEdit"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Left" type="TextureButton" parent="LevelSettings/BackgroundEdit/BackgroundButtons"]
margin_left = -28.1108
margin_right = 99.8892
margin_bottom = 128.0
rect_rotation = 180.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="Right" type="TextureButton" parent="LevelSettings/BackgroundEdit/BackgroundButtons"]
margin_left = 445.0
margin_right = 573.0
margin_bottom = 128.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="ForegroundButtons" type="Control" parent="LevelSettings/BackgroundEdit"]
margin_top = 100.0
margin_right = 40.0
margin_bottom = 140.0

[node name="Left" type="TextureButton" parent="LevelSettings/BackgroundEdit/ForegroundButtons"]
margin_left = -28.1108
margin_top = -7.49707
margin_right = 99.8892
margin_bottom = 120.503
rect_rotation = 180.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
button_mask = 3
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="Right" type="TextureButton" parent="LevelSettings/BackgroundEdit/ForegroundButtons"]
margin_left = 445.0
margin_top = -7.497
margin_right = 573.0
margin_bottom = 120.503
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
button_mask = 3
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="HoverSound" type="AudioStreamPlayer" parent="LevelSettings/BackgroundEdit"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="LevelSettings/BackgroundEdit"]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="Music" type="Control" parent="LevelSettings"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="LevelSettings/Music"]
margin_left = 85.0
margin_top = 270.0
margin_right = 464.0
margin_bottom = 380.0
texture = ExtResource( 18 )

[node name="MusicNote" type="LineEdit" parent="LevelSettings/Music"]
margin_left = 127.0
margin_top = 340.0
margin_right = 422.0
margin_bottom = 378.0
custom_fonts/font = SubResource( 2 )
custom_styles/read_only = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
align = 1
context_menu_enabled = false
placeholder_text = "Loop point"
placeholder_alpha = 0.35

[node name="MusicTitle" type="LineEdit" parent="LevelSettings/Music"]
margin_left = 97.0
margin_top = 279.0
margin_right = 452.0
margin_bottom = 330.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
align = 1
context_menu_enabled = false
placeholder_text = "Custom Music URL"
placeholder_alpha = 0.35

[node name="Buttons" type="Control" parent="LevelSettings/Music"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Left" type="TextureButton" parent="LevelSettings/Music/Buttons"]
margin_left = -5.0
margin_top = 241.0
margin_right = 123.0
margin_bottom = 369.0
rect_rotation = 180.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="Right" type="TextureButton" parent="LevelSettings/Music/Buttons"]
margin_left = 425.0
margin_top = 241.0
margin_right = 553.0
margin_bottom = 369.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="HoverSound" type="AudioStreamPlayer" parent="LevelSettings/Music"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="LevelSettings/Music"]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="LevelSize" type="Control" parent="LevelSettings"]
margin_left = 202.5
margin_top = 47.5
margin_right = 242.5
margin_bottom = 87.5
rect_scale = Vector2( 0.8, 0.8 )
script = ExtResource( 3 )
shared_node_path = NodePath("../../../../Shared")
backgrounds_node_path = NodePath("../../../../Backgrounds")
camera_node_path = NodePath("../../../../Camera2D")

[node name="Middle" type="TextureRect" parent="LevelSettings/LevelSize"]
margin_left = 787.283
margin_top = 212.103
margin_right = 1445.28
margin_bottom = 689.103
rect_scale = Vector2( 0.22, 0.3 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="LevelSettings/LevelSize/Middle"]
margin_left = -35.0
margin_top = 27.0
margin_right = 552.0
margin_bottom = 451.0
rect_scale = Vector2( 1.25, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1

[node name="Buttons" type="Control" parent="LevelSettings/LevelSize"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Left" type="Control" parent="LevelSettings/LevelSize/Buttons"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Out" type="TextureButton" parent="LevelSettings/LevelSize/Buttons/Left"]
margin_left = 670.0
margin_top = 219.0
margin_right = 798.0
margin_bottom = 347.0
rect_rotation = 180.0
rect_scale = Vector2( 0.15, 0.25 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
button_mask = 3
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="In" type="TextureButton" parent="LevelSettings/LevelSize/Buttons/Left"]
margin_left = 700.842
margin_top = 219.0
margin_right = 828.842
margin_bottom = 347.0
rect_scale = Vector2( 0.15, 0.25 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
button_mask = 3
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="Right" type="Control" parent="LevelSettings/LevelSize/Buttons"]
margin_left = 200.0
margin_right = 240.0
margin_bottom = 40.0

[node name="Out" type="TextureButton" parent="LevelSettings/LevelSize/Buttons/Right"]
margin_left = 722.842
margin_top = 219.0
margin_right = 850.842
margin_bottom = 347.0
rect_scale = Vector2( 0.15, 0.25 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
button_mask = 3
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="In" type="TextureButton" parent="LevelSettings/LevelSize/Buttons/Right"]
margin_left = 690.842
margin_top = 219.0
margin_right = 818.842
margin_bottom = 347.0
rect_rotation = 180.0
rect_scale = Vector2( 0.15, 0.25 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
button_mask = 3
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="Up" type="Control" parent="LevelSettings/LevelSize/Buttons"]
margin_left = 215.0
margin_right = 255.0
margin_bottom = 40.0

[node name="Out" type="TextureButton" parent="LevelSettings/LevelSize/Buttons/Up"]
margin_left = 582.0
margin_top = 98.0
margin_right = 710.0
margin_bottom = 226.0
rect_rotation = -89.9999
rect_scale = Vector2( 0.15, 0.25 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
button_mask = 3
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="In" type="TextureButton" parent="LevelSettings/LevelSize/Buttons/Up"]
margin_left = 582.0
margin_top = 127.6
margin_right = 710.0
margin_bottom = 255.6
rect_rotation = 90.0
rect_scale = Vector2( 0.15, 0.25 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
button_mask = 3
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="Down" type="Control" parent="LevelSettings/LevelSize/Buttons"]
margin_left = 215.0
margin_top = 200.0
margin_right = 255.0
margin_bottom = 240.0

[node name="Out" type="TextureButton" parent="LevelSettings/LevelSize/Buttons/Down"]
margin_left = 582.0
margin_top = 142.0
margin_right = 710.0
margin_bottom = 270.0
rect_rotation = 90.0
rect_scale = Vector2( 0.15, 0.25 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
button_mask = 3
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="In" type="TextureButton" parent="LevelSettings/LevelSize/Buttons/Down"]
margin_left = 582.0
margin_top = 111.0
margin_right = 710.0
margin_bottom = 239.0
rect_rotation = -90.0
rect_scale = Vector2( 0.15, 0.25 )
rect_pivot_offset = Vector2( 64, 64 )
action_mode = 0
button_mask = 3
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="HoverSound" type="AudioStreamPlayer" parent="LevelSettings/LevelSize"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="LevelSettings/LevelSize"]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="LevelName" type="Control" parent="LevelSettings"]
margin_left = -17.0
margin_top = -104.0
margin_right = 23.0
margin_bottom = -64.0
script = ExtResource( 8 )

[node name="LineEdit" type="LineEdit" parent="LevelSettings/LevelName"]
margin_left = 577.0
margin_top = 134.0
margin_right = 1025.0
margin_bottom = 212.0
custom_colors/font_color = Color( 0.1496, 0.18832, 0.44, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
context_menu_enabled = false
placeholder_text = "Level Name"
placeholder_alpha = 0.35

[node name="Gravity" type="Control" parent="LevelSettings"]
margin_left = -17.0
margin_top = 51.0
margin_right = 23.0
margin_bottom = 91.0
script = ExtResource( 23 )

[node name="LineEdit" type="LineEdit" parent="LevelSettings/Gravity"]
margin_left = 577.0
margin_top = 144.0
margin_right = 772.0
margin_bottom = 222.0
custom_colors/font_color = Color( 0.14902, 0.188235, 0.439216, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 6 )
align = 1
context_menu_enabled = false

[node name="Label" type="Label" parent="LevelSettings/Gravity"]
margin_left = 609.596
margin_top = 220.197
margin_right = 847.596
margin_bottom = 292.197
custom_fonts/font = SubResource( 14 )
text = "Gravity"

[node name="Hotkeys" type="Control" parent="LevelSettings"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Hotkeys" type="Button" parent="LevelSettings/Hotkeys"]
margin_left = 510.0
margin_top = 402.567
margin_right = 910.0
margin_bottom = 492.567
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
shortcut_in_tooltip = false
action_mode = 0
text = "Hotkeys"
script = ExtResource( 5 )

[node name="HoverSound" type="AudioStreamPlayer" parent="LevelSettings/Hotkeys/Hotkeys"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="LevelSettings/Hotkeys/Hotkeys"]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="Areas" parent="LevelSettings" instance=ExtResource( 21 )]
margin_left = 90.0
margin_top = 402.56
margin_right = 490.0
margin_bottom = 492.56
text = "Areas"
script = ExtResource( 20 )

[node name="Areas" type="Control" parent="."]
visible = false
anchor_bottom = 0.06
margin_left = 17.4044
margin_top = 104.0
margin_right = 1036.4
margin_bottom = 498.0
script = ExtResource( 10 )

[node name="ScrollContainer" type="ScrollContainer" parent="Areas"]
margin_right = 1013.0
margin_bottom = 380.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Areas/ScrollContainer"]
margin_right = 1013.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 210
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="Areas" instance=ExtResource( 21 )]
margin_left = 90.0
margin_top = 403.0
margin_right = 490.0
margin_bottom = 493.0
text = "Level Settings"

[node name="NewArea" parent="Areas" instance=ExtResource( 21 )]
margin_left = 510.0
margin_top = 403.0
margin_right = 910.0
margin_bottom = 493.0
text = "New Area"

[node name="Hotkeys" parent="." instance=ExtResource( 22 )]
visible = false

[node name="Tween" type="Tween" parent="."]
